ReactJS.-Class-components added

--- a/src/contacts/contacts.css
+++ b/src/contacts/contacts.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     background-size: 100%;
-    background: linear-gradient(to top, #fff, #1B5E20);
+    background: linear-gradient(to top, #fff, #f5ab35);
 }
 
 input{
